# RustPractice

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/libs/: constants.rs  dsa.rs  mod.rs  try_prime_checker.rs
src/libs/dsa/: linked_list.rs  mod.rs  recursion.rs  traits.rs
src/libs/structures/: implementations.rs  mod.rs  schema.rs  traits.rs
src/libs/utils/: file_utils.rs
