[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4", features = ["serde"]}
prime-checker = "0.2.12"
uuid = { version="1.3.3", features = ["v4","fast-rng","macro-diagnostics", "serde"] }
serde = {version="1.0.163", features = ["derive"]}
serde_json = "1.0.96"
dotenv = "0.15.0"
